# boids

./: CMakeLists.txt  README.md  boid.cpp  boid.h  main.cpp  rule.cpp  rule.h  vector_utils.h
include/: quadtree.h  random.h
